--- a/views/login.pug
+++ b/views/login.pug
@@ -12,7 +12,7 @@ html(lang="en")
         div.userOverlay
             img.userIcon
             h2 Welcome!
-        // include sidebar.jade
+        // include sidebar.pug
         main.noSidebar
             div.loginBlock
                 div.formTitle 
