--- a/views/register.pug
+++ b/views/register.pug
@@ -7,7 +7,7 @@ html(lang="en")
         link(rel="stylesheet", href= "https://use.fontawesome.com/1b61713aa1.css", type="text/css")
         link(rel="icon", type="image/x-icon", href="/assets/favicon.png")
     body.registerPage
-        // include sidebar.jade
+        // include sidebar.pug
         main.noSidebar
             div.loginBlock
                 div.formTitle 
