--- a/views/info.pug
+++ b/views/info.pug
@@ -7,7 +7,7 @@ html(lang="en")
         link(rel="stylesheet", href= "https://use.fontawesome.com/1b61713aa1.css", type="text/css")
         link(rel="icon", type="image/x-icon", href="/assets/favicon.png")
     body.loginPage
-        // include sidebar.jade
+        // include sidebar.pug
         main
             h2.infoMessage= msg
             a(href= redirect).glass-btn= button
