--- a/views/newLanguage.pug
+++ b/views/newLanguage.pug
@@ -12,17 +12,17 @@ html(lang="en")
             div.topBar
                 div.top
                     if m
-                        span.mainTitle 
+                        span.mainTitle
                             span Welcome to Phrasebook!
                             span.subtext Please choose a language to start collecting.
                         div.buttons
                             a(href="/phrasebook/logout").button.bgRed
-                                i(class="fa fa-fw fa-sign-out") 
+                                i(class="fa fa-fw fa-sign-out")
                                 span Logout
                     else
-                        span.mainTitle 
-                            i(class="fa fa-fw fa-plus") 
-                            span Add a new Language 
+                        span.mainTitle
+                            i(class="fa fa-fw fa-plus")
+                            span Add a new Language
             form(method="post", action="/phrasebook/app/newlanguage").invisible-form
                 div.content-language-select
                     div.language-selector
@@ -30,16 +30,15 @@ html(lang="en")
                             each lang in langs
                                 div.language-block
                                     span.language-title= lang.language
-                                    img(src= "//dcatcher.me/assets/" + lang.shortened + ".svg").language-icon
+                                    img(src= "//dcatcher.me/assets/" + lang.shortened + ".svg", alt= lang.shortened).language-icon
                                     span.hidden= lang.shortened
                         else
                             span(style="color: #d12929").mainTitle There are no languages to choose from
                 div.submit-section
                     input(type="hidden", value="", name="langVal")#langVal.langVal
-                
+
         script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js")
         script(src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.0/external/jquery/jquery.js")
         script(src="/js/dropdown.js")
         script(src="/js/languagePicker.js")
         script(src="/js/sidebar.js")
-        
