--- a/views/category.pug
+++ b/views/category.pug
@@ -19,6 +19,12 @@ html(lang="en")
                         span.num-badge= words.length
                     div.buttons
                         a(href="/phrasebook/app/words/new?c=" + current._id).button Add new word
+                        if (current.pinned)
+                            a(href="/phrasebook/app/category/pin?c=" + current._id).button.pinned
+                                i.fa.fa-fw.fa-circle
+                        else
+                            a(href="/phrasebook/app/category/pin?c=" + current._id + "&p=true").button.pin
+                                i.fa.fa-fw.fa-thumb-tack.fa-rotate-45
                         form(onkeypress="return event.keyCode != 13;").searchBox
                             input(type="hidden", id="username", value= s.username)
                             input(type="hidden", id="shortenedLanguage", value= s.currentlanguage.shortened)
@@ -27,10 +33,10 @@ html(lang="en")
 
             div.content
                 div(class="wbtitle").wordBlock
-                    span.lang 
+                    span.lang
                         h1= s.currentlanguage.language
                     span.padding
-                    span.english 
+                    span.english
                         h1 English
                 div(class="wbadd").wordBlock
                     span.addnew
