--- a/css/main.scss
+++ b/css/main.scss
@@ -836,14 +836,14 @@ form.appForm {
     flex-direction: row;
     align-content: center;
     align-items: center;
-
+    line-height: 2.25rem;
     i:not(.fa) {
         padding-right: 1rem;
         font-style: normal;
         font-weight: 700;
     }
     span:not(.padding){
-        margin-right: 1rem;
+        margin:0 0.5rem;
     }
     span.padding {
         display: none;
@@ -851,7 +851,7 @@ form.appForm {
 
     span.subtext {
         color: rgb(105, 105, 105);
-        margin-top: 0.75rem;
+        margin-top: 0.5rem;
         font-size: 1.5rem;
     }
 
@@ -971,7 +971,7 @@ div.errorMessage {
 .buttons {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    // justify-content: space-between;
 
     a {
         margin: 0rem 0.25rem;
@@ -1028,7 +1028,10 @@ a.button:hover {
 form.searchBox {
     input[type=text] {
         height: 2.5rem;
-        margin: 0 1rem;
+        margin: 0 .5rem;
+        border-top-left-radius: 0.5rem;
+        border-top-right-radius: 0.5rem;
+        border-bottom-right-radius: 0.5rem;
     }
 }
 
@@ -1065,12 +1068,23 @@ ul.categoryList {
 
             transition: background-color 0.2s;
             span.short {
-                font-weight: 700;
-                width: 3rem;
+                // font-weight: 600;
+                font-size: 3rem;
+                height: 100%;
+
+                display: flex;
+                justify-content: center;
+                align-items: center;
+
+                i {
+                    font-weight: normal !important;
+                }
             }
 
             span.name {
-                margin-right: 2rem;
+                margin-right: 3rem;
+                font-weight: 700;
+                // overflow-x: hiddent
             }
 
             span.padding {
@@ -1114,6 +1128,10 @@ ul.categoryList {
             background-color: lighten($primary, 10%);
             color: white;
             font-weight: 700;
+        }
+
+        a.addNew:hover {
+            background-color: $lightGreen;
         }
     }
 }
